<resources>
    <string name="app_name">Recipe App</string>
    <string name="email_address"></string>
    <string name="password">""</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="logo">Logo</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="password_hint_confirmation">Password Confirmation</string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>
    <string name="facebook_app_id">2839343272793994</string>
    <string name="fb_login_protocol_scheme">fb2839343272793994</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="wrong_e_mail_or_password">Wrong e-mail or password</string>
    <string name="email_required">E-mail required</string>
    <string name="password_required">Password required</string>
    <string name="name_required">Name required</string>
    <string name="password_confirmation_error">Password and password confirmation don\'t match</string>
    <string name="error_creating_account">An error happened while creating the account</string>
    <string name="recipes">Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="account">Account</string>
    <string name="name_hint">Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name"></string>
    <string name="user_name"></string>
    <string name="last_step">Last Step</string>
    <string name="next_step">Next Step</string>
    <string name="start_video">Start Video</string>
    <string name="loading_video">Loading video...</string>
    <string name="go_back_to_recipes">Go back to recipes</string>
    <string name="start_recipe">Start Recipe</string>
    <string name="welcome_to_recipe_app_n_press_on_recipes_to_find_new_recipes">Welcome to Recipe App\nPress on Recipes to find new recipes</string>
    <string name="finish_recipe">Finish Recipe</string>
    <string name="loading_recipe">Loading Recipe...</string>
</resources>
