<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:contentDescription="@string/logo"
        app:srcCompat="@mipmap/logo" />

    <Button
        android:id="@+id/login_email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:onClick="onContinueEmailClicked"
        android:text="@string/continue_with_email"
        android:textAllCaps="false"
        android:background="@android:color/darker_gray"/>


    <Button
        android:id="@+id/login_facebook_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@drawable/com_facebook_button_send_background"
        android:onClick="onContinueEmailClicked"
        android:text="@string/continue_with_facebook"
        android:textAllCaps="false" />


    <Button
        android:id="@+id/login_google_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:background="@drawable/common_google_signin_btn_text_light"
        android:onClick="onContinueEmailClicked"
        android:text="@string/continue_with_google"
        android:textAllCaps="false" />

</LinearLayout>