<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecipeFlowActivity">

    <VideoView
        android:id="@+id/recipe_video"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_weight="0"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_weight="4"
        android:src="@drawable/ic_refresh_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recipe_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="180dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/loading_recipe"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/last_step_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onLastStepClicked"
        android:text="@string/last_step"
        android:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="@+id/next_step_button"
        app:layout_constraintEnd_toStartOf="@+id/next_step_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_text"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/next_step_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="35dp"
        android:onClick="onNextStepClicked"
        android:text="@string/next_step"
        android:backgroundTint="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_text" />

    <Button
        android:id="@+id/start_video_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onStartVideoClicked"
        android:text="@string/start_video"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/recipe_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_video"
        app:layout_constraintVertical_bias="0.212" />

    <Button
        android:id="@+id/finish_recipe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/finish_recipe"
        android:visibility="gone"
        android:onClick="onFinishRecipeClicked"
        android:backgroundTint="@android:color/holo_blue_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>